--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ポートフォリオ | Work</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.0/css/all.css">
 <link href="css/style.css" rel="stylesheet">
