--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 	  <h2>～・<span>Work</span>・～</h2>
 	  <div class="p-top__work--contents">
 		<figure class="js-fadeup--work">
+		  <img src="img/work-img13.jpg" alt="吉田工商">
+		  <figcaption>吉田工商様</figcaption>
+		</figure>
+		<figure class="js-fadeup--work">
 		  <img src="img/work-img01.jpg" alt="岡本産業">
 		  <figcaption>岡本産業株式会社様</figcaption>
 		</figure>
 		<figure class="js-fadeup--work">
 		  <img src="img/work-img02.jpg" alt="藤和ホーム">
 		  <figcaption>藤和ホーム株式会社様</figcaption>
-		</figure>
-		<figure class="js-fadeup--work">
-		  <img src="img/work-img03.jpg" alt="Hair Green">
-		  <figcaption>Hair Green様</figcaption>
 		</figure>
 	  </div>
 	  <a href="work.html" class="c-btn">詳しく見る</a>
