--- a/work.html
+++ b/work.html
@@ -27,7 +27,17 @@
 
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://www.okamoto.or.jp/" target="_blank"><img src="img/work-img01.jpg" alt=""></a>
+		<a href="https://www.okamoto.or.jp/" target="_blank"><img src="img/work-img13.jpg" alt="吉田工商"></a>
+	  </div>
+	  <section class="p-work__contents--text">
+		<h2><a href="https://www.okamoto.or.jp/" target="_blank">株式会社吉田工商様採用サイト</a></h2>
+		<p>株式会社吉田工商様の採用サイトの制作に携わらせて頂きました。<br>コーディング、WordPressを担当させて頂きました。</p>
+	  </section>
+	</div>
+	
+	<div class="p-work__contents">
+	  <div class="p-work__contents--img">
+		<a href="https://www.okamoto.or.jp/" target="_blank"><img src="img/work-img01.jpg" alt="岡本産業"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://www.okamoto.or.jp/" target="_blank">岡本産業株式会社様</a></h2>
@@ -37,7 +47,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://towa-hm.co.jp/" target="_blank"><img src="img/work-img02.jpg" alt=""></a>
+		<a href="https://towa-hm.co.jp/" target="_blank"><img src="img/work-img02.jpg" alt="藤和ホーム"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://towa-hm.co.jp/" target="_blank">藤和ホーム株式会社様</a></h2>
@@ -47,7 +57,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://www.h-green.com/" target="_blank"><img src="img/work-img03.jpg" alt=""></a>
+		<a href="https://www.h-green.com/" target="_blank"><img src="img/work-img03.jpg" alt="Hair Green"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://www.h-green.com/" target="_blank">Hair Green様</a></h2>
@@ -57,7 +67,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://beo-marin.com/" target="_blank"><img src="img/work-img04.jpg" alt=""></a>
+		<a href="https://beo-marin.com/" target="_blank"><img src="img/work-img04.jpg" alt="ベオマリン"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://beo-marin.com/" target="_blank">ベオマリン様</a></h2>
@@ -67,7 +77,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://www.takazawaconstr.com/" target="_blank"><img src="img/work-img05.jpg" alt=""></a>
+		<a href="https://www.takazawaconstr.com/" target="_blank"><img src="img/work-img05.jpg" alt="高沢工務店"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://www.takazawaconstr.com/" target="_blank">株式会社高沢工務店様</a></h2>
@@ -77,7 +87,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://www.hata-house.com/" target="_blank"><img src="img/work-img06.jpg" alt=""></a>
+		<a href="https://www.hata-house.com/" target="_blank"><img src="img/work-img06.jpg" alt="HATAホーム"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://www.hata-house.com/" target="_blank">株式会社HATAホーム様</a></h2>
@@ -87,7 +97,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://o-taki-kensetsu.com/" target="_blank"><img src="img/work-img07.jpg" alt=""></a>
+		<a href="https://o-taki-kensetsu.com/" target="_blank"><img src="img/work-img07.jpg" alt="大滝建設"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://o-taki-kensetsu.com/" target="_blank">株式会社大滝建設様</a></h2>
@@ -97,7 +107,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<img src="img/work-img08.jpg" alt="">
+		<img src="img/work-img08.jpg" alt="assist">
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2>ヒューマンアカデミー様</h2>
@@ -107,7 +117,7 @@
 	
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://joy-g.co.jp/" target="_blank"><img src="img/work-img09.jpg" alt=""></a>
+		<a href="https://joy-g.co.jp/" target="_blank"><img src="img/work-img09.jpg" alt="JOYグループ"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://joy-g.co.jp/" target="_blank">JOYグループ様</a></h2>
@@ -117,7 +127,7 @@
 	  
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://tajimakikou.jp/" target="_blank"><img src="img/work-img10.jpg" alt=""></a>
+		<a href="https://tajimakikou.jp/" target="_blank"><img src="img/work-img10.jpg" alt="田島斫工"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://tajimakikou.jp/" target="_blank">有限会社田島斫工様</a></h2>
@@ -127,7 +137,7 @@
 	  
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://fami-med.or.jp/" target="_blank"><img src="img/work-img11.jpg" alt=""></a>
+		<a href="https://fami-med.or.jp/" target="_blank"><img src="img/work-img11.jpg" alt="家庭医療学研究所"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://fami-med.or.jp/" target="_blank">一般財団法人家庭医療学研究所様</a></h2>
@@ -137,7 +147,7 @@
 	  
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<img src="img/work-img12.jpg" alt="">
+		<img src="img/work-img12.jpg" alt="建勝">
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2>株式会社建勝様</h2>
