--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
 
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
-		<a href="https://www.yoshida-kosyo-saiyou.com/" target="_blank"><img src="img/work-img13.jpg" alt="吉田工商"></a>
+		<a href="https://www.yoshida-kosyo-saiyou.com" target="_blank"><img src="img/work-img13.jpg" alt="吉田工商"></a>
 	  </div>
 	  <section class="p-work__contents--text">
 		<h2><a href="https://www.yoshida-kosyo-saiyou.com/" target="_blank">株式会社吉田工商様採用サイト</a></h2>
