--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 	  </div>
 	  <div class="p-top__profile--text">
 	    <h3>片峯慎太</h3>
-	    <p>神戸市出身、高崎市在住。<br>職業訓練校のWEBデザイン科で勉強したのち、WEB制作会社にてマークアップエンジニアとして働いています。<br>2024年3月に横浜システム工学院専門学校を卒業予定</p>
+	    <p>神戸市出身、高崎市在住。<br>職業訓練校のWEBデザイン科で勉強したのち、WEB制作会社にてマークアップエンジニアとして働いています。<br>2024年3月に横浜システム工学院専門学校を卒業</p>
 	    <dl>
 	      <dt>資格</dt>
 		  <dd>Adobe認定アソシエイトIllustratorCC<br>Adobe認定アソシエイトPhotoshopCC<br>Webクリエイター能力認定試験（エキスパート）</dd>
 		  <dt>スキル</dt>
-		  <dd>HTML、CSS、jQuery、PHP、Python、WordPress、Photoshop、Illustrator、Dreamweaver、VScode</dd>
+		  <dd>HTML、CSS、Sass、jQuery、PHP、Python、WordPress、Photoshop、Illustrator、Dreamweaver、VScode</dd>
 	    </dl>
 	  </div>
     </section>
@@ -43,16 +43,16 @@
 	  <h2>～・<span>Work</span>・～</h2>
 	  <div class="p-top__work--contents">
 		<figure class="js-fadeup--work">
+		  <img src="img/work-img14.jpg" alt="伊興">
+		  <figcaption>株式会社伊興様</figcaption>
+		</figure>
+		<figure class="js-fadeup--work">
 		  <img src="img/work-img13.jpg" alt="吉田工商">
 		  <figcaption>吉田工商様</figcaption>
 		</figure>
 		<figure class="js-fadeup--work">
 		  <img src="img/work-img01.jpg" alt="岡本産業">
 		  <figcaption>岡本産業株式会社様</figcaption>
-		</figure>
-		<figure class="js-fadeup--work">
-		  <img src="img/work-img02.jpg" alt="藤和ホーム">
-		  <figcaption>藤和ホーム株式会社様</figcaption>
 		</figure>
 	  </div>
 	  <a href="work.html" class="c-btn">詳しく見る</a>
