--- a/work.html
+++ b/work.html
@@ -24,6 +24,16 @@
   <div class="l-container">
     
 	<h1 class="p-work__title">～・<span>Work</span>・～</h1>
+	
+	<div class="p-work__contents">
+	  <div class="p-work__contents--img">
+		<a href="https://www.ikou-k.com/" target="_blank"><img src="img/work-img14.jpg" alt="吉田工商"></a>
+	  </div>
+	  <section class="p-work__contents--text">
+		<h2><a href="https://www.ikou-k.com/" target="_blank">株式会社伊興様</a></h2>
+		<p>株式会社伊興様のサイトの制作に携わらせて頂きました。<br>コーディング、WordPressを担当させて頂きました。</p>
+	  </section>
+	</div>
 
 	<div class="p-work__contents">
 	  <div class="p-work__contents--img">
